Build warnings cleanup

--- a/build.properties
+++ b/build.properties
@@ -5,5 +5,4 @@ bin.includes = META-INF/,\
                lib/
 src.includes = META-INF/,\
                README.md,\
-               LICENSE.md,\
-               build.properties
+               LICENSE.md
